--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<navbar></navbar>
+
 <section class="wrapper">
+    <!-- <navbar></navbar> -->
     <div class="conteudo-capa">
 
         <div class="lado-esquerdo">
@@ -17,7 +18,6 @@
         <div class="lado-direito">
             <img src="../../assets/5893.jpg" alt="">
         </div>
-
     </div>
     
 </section>
