--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<!-- <div class="wrapper--app"> -->
+    <navbar></navbar>
+    
+    <router-outlet></router-outlet>
+    <!-- <section class="main">
+    </section> -->
+<!-- </div> -->
