--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,8 +8,8 @@
             <span>HEALTH.</span>
         </div>
         <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">SOBRE</a></li>
+            <li><a href=" ">HOME</a></li>
+            <li><a routerLink="/sobre">SOBRE</a></li>
             <li><a href="">SERVIÇO</a></li>
             <li><a href="">CONTATO</a></li>
         </ul>
