--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,13 +24,13 @@
                 height: 100%;
                 display: flex;
                 flex-direction: column;
-              //  align-items: center;
-              //  justify-content: center !important;
+                //  align-items: center;
+                //  justify-content: center !important;
 
                 .title {
                     margin: 1em 0 0.5em 0;
                     font-size: 2.5rem;
-                   
+
                     .t1 {
                         color: #151587;
                     }
@@ -50,10 +50,10 @@
                     border-radius: 20px;
                     background: #fe5b7f;
                     color: white;
-                    transition: .3s ease-in-out;
+                    transition: 0.3s ease-in-out;
                     margin: 2em auto;
 
-                    &:hover{
+                    &:hover {
                         background: #f33e65;
                     }
                 }
@@ -71,20 +71,27 @@
     }
 }
 
-
 //tablets
 
-@media screen and(max-width: 770px){
-    .title{
-        font-size: 1.6em !important;
-        text-align: center;
+@media screen and(max-width: 770px) {
+    .wrapper {
+      //  border: 1px solid red;
+        // padding: 0 2em;
+        .conteudo-capa {
+            padding: 5em 2em 0 2em;
+            // border: 5px solid;
+        }
+        .title {
+            font-size: 1.6em !important;
+            text-align: center;
+        }
     }
 }
 
-@media screen and(max-width: 600px){
-    .wrapper{
+@media screen and(max-width: 600px) {
+    .wrapper {
         height: auto;
-        .conteudo-capa{
+        .conteudo-capa {
             //border: 1px solid red;
             flex-wrap: wrap;
         }
