--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,10 @@
             <span>HEALTH.</span>
         </div>
         <ul>
-            <li><a href=" ">HOME</a></li>
+            <li><a routerLink="">HOME</a></li>
             <li><a routerLink="/sobre">SOBRE</a></li>
-            <li><a href="">SERVIÇO</a></li>
-            <li><a href="">CONTATO</a></li>
+            <li><a routerLink="/servicos">SERVIÇOS</a></li>
+            <li><a routerLink="/contato">CONTATO</a></li>
         </ul>
     </nav>
 </header>
