--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 <div class="text">
                     <span>Donec rutrum, tortor in egestas tempus, ex ex tempus odio, non egestas orci augue eget eros. Proin aliquam arcu eget sapien interdum, sit amet porttitor tortor mollis. Maecenas finibus vehicula sem, a ornare eros pellentesque a. Duis molestie orci sed libero maximus euismod. Suspendisse dolor urna, finibus vitae ultricies in, tristique vitae felis.</span>
                 </div>
-                <a href="" class="btn">Saiba mais</a>
+                <a  class="btn" (click)="goInfo()">Saiba mais</a>
             </div>
         </div>
         <div class="lado-direito">
