--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -52,6 +52,7 @@
                     color: white;
                     transition: 0.3s ease-in-out;
                     margin: 2em auto;
+                    cursor: pointer;
 
                     &:hover {
                         background: #f33e65;
