mais informações, sobre a página 'SOBRE', e mais algumas outras

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,8 @@
             <i class="fas fa-bars"></i>
         </label>
         <div class="logo">
-            <span>HEALTH.</span>
+          <!-- <a routerLink=""><span>HEALTH.</span></a>   -->
+          <span>HEALTH.</span>
         </div>
         <ul>
             <li><a routerLink="">HOME</a></li>
