--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,1 +1,28 @@
-<p>contato works!</p>
+<div class="wrapper">
+    <div class="conteudo-contato">
+
+        <div class="title-contato">
+            <h1>E então, vamos nos exercitar?</h1>
+        </div>
+
+
+        <div class="forms-contato">
+            <div class="lado-direito">
+                <img src="../../assets/4850801.jpg" alt="">
+            </div>
+            <div class="lado-esquerdo">
+               <div class="inputs-contato">
+                   <input type="text" placeholder="Diga o seu nome completo">
+                   <input type="email" placeholder="Digite o seu e-mail">
+                   <textarea name="" id="" cols="30" rows="10"></textarea>
+
+                   <input type="submit" value="Enviar" class="btn">
+                   
+               </div>
+               <div class="wpp">
+                   <a href="#"><span>Ou se preferir, fale comigo pelo whatsApp <i class="fab fa-whatsapp"></i></span> </a>
+               </div>
+            </div>
+        </div>
+    </div>
+</div>
